--- a/css/styles.css
+++ b/css/styles.css
@@ -11,3 +11,23 @@
     width: 100px;
     height: 100px;
 }
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+html,
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    height: 70%;
+    display: flex;
+    align-items: center;
+}
