--- a/css/styles.css
+++ b/css/styles.css
@@ -36,3 +36,80 @@ body {
     margin: 0 16px;
     color: #3d3b3b;
 }
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    padding: 10px;
+}
+
+.navbar-dark {
+    background-color: #000347;
+}
+
+.navbar-center {
+    text-align: center;
+    flex-grow: 1;
+}
+
+.navbar-text {
+    color: white;
+    font-weight: bold;
+    font-size: 40px;
+    margin: 0;
+    text-decoration: none;
+}
+
+.navbar-logo {
+    margin-left: 40px;
+    height: 120px;
+}
+
+.sidebar {
+    width: 230px;
+    background-color: #bcbcbc;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding-top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sidebar-menu {
+    margin-top: 100px;
+    padding: 15px;
+    text-align: center;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.sidebar-link {
+    display: block;
+    padding: 10px;
+    color: black;
+    text-decoration: none;
+    border: 1px solid #5b5b5b;
+    border-radius: 6px;
+    margin-bottom: 40px;
+}
+
+.table {
+    position: relative;
+    top: 10%;
+    transform: translateX(10%);
+}
+
+#logoutBtn {
+    margin-top: auto;
+    display: block;
+    color: black;
+    text-decoration: none;
+    margin-bottom: 30px;
+}
