--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,19 @@ body {
 .table {
     position: relative;
     top: 10%;
-    transform: translateX(10%);
+    transform: translateX(15%);
+}
+
+.date-time-container {
+    margin-left: 200px;
+    margin-bottom: 9.5cm;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.date-time {
+    white-space: nowrap;
 }
 
 #logoutBtn {
