--- a/css/styles.css
+++ b/css/styles.css
@@ -27,9 +27,11 @@ body {
 }
 
 .container {
-    height: 70%;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
 .menu-divider {
@@ -102,20 +104,31 @@ body {
 
 .table {
     position: relative;
-    top: 10%;
-    transform: translateX(15%);
+    top: auto;
+    transform: translateX(auto);
+    top: -1cm;
+    left: -5cm;
+    height: 100%;
+}
+
+.table-container {
+    margin-bottom: 1.5em;
 }
 
 .date-time-container {
-    margin-left: 200px;
-    margin-bottom: 9.5cm;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+    bottom: 450px;
+    left: 50%;
+    transform: translate(-200px, -100px);
 }
 
 .date-time {
     white-space: nowrap;
+    font-size: 1.5em;
+    margin-top: 0.5em;
 }
 
 #logoutBtn {
