--- a/css/styles.css
+++ b/css/styles.css
@@ -65,12 +65,14 @@ body {
 }
 
 .navbar-logo {
-    margin-left: 40px;
+    margin-left: 75px;
     height: 120px;
 }
 
 .sidebar {
-    width: 230px;
+    width: 20%;
+    min-width: 200px;
+    max-width: 300px;
     background-color: #bcbcbc;
     height: 100vh;
     position: fixed;
@@ -93,6 +95,7 @@ body {
 }
 
 .sidebar-link {
+    width: 200px;
     display: block;
     padding: 10px;
     color: black;
@@ -105,10 +108,11 @@ body {
 .table {
     position: relative;
     top: auto;
-    transform: translateX(auto);
-    top: -1cm;
-    left: -5cm;
+    width: 80%;
     height: 100%;
+    transform: translateX(auto);
+    top: 2cm;
+    left: -1cm;
 }
 
 .table-container {
@@ -120,9 +124,9 @@ body {
     flex-direction: column;
     align-items: center;
     position: relative;
-    bottom: 450px;
+    bottom: 300px;
     left: 50%;
-    transform: translate(-200px, -100px);
+    transform: translate(-150px, -100px);
 }
 
 .date-time {
@@ -137,4 +141,66 @@ body {
     color: black;
     text-decoration: none;
     margin-bottom: 30px;
+    text-align: center;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.other-container {
+    margin-top: 20px;
+}
+
+.content-item {
+    text-align: center;
+}
+
+.content-item h3 {
+    margin: 0;
+}
+
+.table-wide {
+    width: 14cm;
+}
+
+.gray-rectangle {
+    border: 1px solid rgb(159, 157, 157);
+    padding: 15px;
+    display: inline-block;
+    background-color: lightgray;
+    height: 60px;
+}
+
+@media (max-width: 767px) {
+    .table {
+        width: 90%;
+        margin-top: 10px;
+    }
+
+    .sidebar {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .table-container {
+        margin-bottom: 0.5em;
+    }
+
+    .navbar-logo {
+        margin-left: 10px;
+        height: 80px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .table {
+        width: 80%;
+        margin-top: 30px;
+    }
+
+    .navbar-logo {
+        margin-left: 50px;
+        height: 100px;
+    }
 }
