--- a/css/styles.css
+++ b/css/styles.css
@@ -27,11 +27,11 @@ body {
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+    width: 100%;
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-right: 0px;
+    margin-left: 250px;
 }
 
 .menu-divider {
@@ -113,7 +113,7 @@ body {
 .table-container {
     margin-bottom: 1em;
     position: relative;
-    top: 4cm;
+    top: 2cm;
 }
 
 #table-data1, #table-data2, #table-data3 {
@@ -125,9 +125,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
-    bottom: 350px;
-    left: 57%;
+    position: fixed;
+    bottom: 50px;
+    left: 35cm;
     transform: translate(-150px, -100px);
 }
 
@@ -173,37 +173,4 @@ body {
     display: inline-block;
     background-color: lightgray;
     height: 60px;
-}
-
-@media (max-width: 767px) {
-    .table {
-        width: 90%;
-        margin-top: 10px;
-    }
-
-    .sidebar {
-        width: 100%;
-        max-width: 100%;
-    }
-
-    .table-container {
-        margin-bottom: 0.5em;
-    }
-
-    .navbar-logo {
-        margin-left: 10px;
-        height: 80px;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 1024px) {
-    .table {
-        width: 80%;
-        margin-top: 30px;
-    }
-
-    .navbar-logo {
-        margin-left: 50px;
-        height: 100px;
-    }
 }
